# easyseccomp

./: .gitignore  Makefile.am  README.md  configure.ac  generator.c  generator.h  parser.y
.github/workflows/: test.yaml
contrib/: convert-from-containers-policy.py  fuzzing-honggfuzz.sh  fuzzing.sh
contrib/disassemble/: Makefile  disassemble.c
contrib/emacs-mode/: easyseccomp.el
contrib/sim/: Makefile  bpf_filter.c  sim.c
contrib/testcases/: 1.testcase  10.testcase  11.testcase  12.testcase  13.testcase  14.testcase  15.testcase  16.testcase  17.testcase  18.testcase  19.testcase  2.testcase  20.testcase  21.testcase  22.testcase  23.testcase  24.testcase  25.testcase  26.testcase  27.testcase  3.testcase  4.testcase  5.testcase  6.testcase  7.testcase  8.testcase  9.testcase
pkg/easyseccomp/: easyseccomp.go  go.mod
src/: errnos.h  generator.c  generator.h  lexer.l  main.c  parser.y  seccomp_run.c  types.c  types.h
src/disassemble/: disassemble.c
src/sim/: bpf.h  bpf_filter.c  glue.h  sim.c
src/syscall-versions/: generate-all-syscalls.sh  generate-c-code.py  syscall-versions.c  syscall-versions.h
tests/: helpers.bash  test_arch.bats  test_args.bats  test_directive.bats  test_range.bats  test_simple.bats
